# trends.earth-API

./: .env.example  .gitignore  .pre-commit-config.yaml  .rebased-onto-staging  .safety-project.ini  DEPLOYMENT_GUIDE.md  Dockerfile  IMPROVED_STATUS_TRACKING_SUMMARY.md  README.md  STATUS_LOG_UPDATES_SUMMARY.md  SWARM_STATUS_OPTIMIZATIONS.md  appspec.yml  base.yml  copilot-setup-steps.yml  demo_optimizations.py  deployment_utils.py  docker-compose-develop.yml  docker-compose-nginx.yml  docker-compose-staging.yml  docker-compose-test.yml  docker-compose.admin.yml  docker-compose.develop.yml  docker-compose.prod.yml  docker-compose.prod2.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  generate_swagger.py  gunicorn.py  init-letsencrypt.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_db_migrations.py  run_tests.bat  run_tests.ps1  run_tests.py  (+6 more)
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: test-failure.md
.github/workflows/: codedeploy_production.yml  codedeploy_staging.yml  deploy-production.yml  deploy-staging.yml  generate-api-docs.yml  rollback-production.yml  rollback-staging.yml  ruff.yaml  run-tests.yml
config/db/: init-postgis.sh  init-postgis.sql
data/: gee_datasets.json
docs/: CODEDEPLOY_SETUP.md  README.md  api-reference.md  authentication.md  background-tasks.md  data-models.md  development.md  docker-security.md  frontend-auth-example.js  github-testing-improvements.md  stats-performance-optimization.md  testing.md
docs/api/: index.html  swagger.json
docs/deployment/: README.md  ROLLBACK-GUIDE.md  STAGING-SCRIPT-IMPORT-FIX.md  github-secrets.md  quick-reference.md  staging-database.md  staging-fix-summary.md
docs/swagger-ui/: index.html  log.es-bundle-core-sizes.swagger-ui.txt  log.es-bundle-sizes.swagger-ui.txt  package.json  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle-core.js.map  swagger-ui-es-bundle.js  swagger-ui.js  swagger-ui.js.map
gefapi/: __init__.py  api_decorators.py  api_docs.py  auth.py  celery.py  errors.py  jwt.py  s3.py  validators.py  wsgi.py
gefapi/config/: __init__.py  base.py  develop.py  prod.py  staging.py  test.py
gefapi/models/: __init__.py  boundary.py  bulk_email.py  bulk_email_recipient_list.py  bulk_email_verification_token.py  execution.py  execution_log.py  news.py  password_reset_token.py  rate_limit_event.py  refresh_token.py  script.py  script_log.py  service_client.py  status_log.py  user.py  user_client_metadata.py  user_deletion_audit.py
gefapi/run/: Dockerfile
gefapi/services/: __init__.py  auth_service.py  batch_service.py  boundaries_service.py  bulk_email_service.py  client_stats_service.py  client_tracking_service.py  docker_service.py  email_service.py  execution_service.py  gcs_iam_service.py  gee_service.py  gee_service_identity_service.py  google_groups_service.py  news_service.py  oauth2_service.py  openeo_credential_service.py  openeo_service.py  rate_limit_event_service.py  refresh_token_service.py  script_service.py  stats_service.py  status_service.py  user_service.py
gefapi/tasks/: __init__.py  batch_monitoring.py  bulk_email_send.py  deletion_audit_cleanup.py  docker_completed_monitoring.py  docker_resource_cleanup.py  docker_service_monitoring.py  enhanced_status_monitoring.py  execution_cancellation.py  execution_cleanup.py  openeo_monitoring.py  queue_processor.py  refresh_token_cleanup.py  stats_cache_refresh.py  status_monitoring.py  user_cleanup.py
gefapi/utils/: __init__.py  csv_export.py  database.py  permissions.py  query_filters.py  rate_limiting.py  redis_cache.py  scopes.py  script_access.py  security_events.py
migrations/: alembic.ini  env.py
migrations/versions/: 06ef5dd6d73a_.py  115924e98eb5_.py  17c881a78966_add_administrative_boundary_tables.py  1a2b3c4d5e6f_merge_status_tracking_and_build_error.py  1f38b2475f49_add_script_access_control.py  20250115_improve_status_tracking.py  20250903_replace_active_with_pending_tracking.py  20250904_add_email_notifications_preference.py  (+68 more)
nginx-conf/: app.conf
notebooks/: .env.example  README.md  api_testing_notebook.ipynb  auth_user_management_tests.ipynb  comprehensive_test_suite.ipynb  script_execution_tests.ipynb  system_monitoring_tests.ipynb  trends_earth_api_utils.py
registry/: docker-compose.yml
scripts/: BOUNDARIES_README.md  README.md  admin_manage_script_access.sh  common.sh  docker-swarm-utils.sh  download_swagger_ui.py  fetch_boundaries_from_api.py  fetch_boundaries_from_api_README.md  generate_sri_hashes.sh  import_boundaries.py  manage_script_access.py  setup-docker-permissions.sh  setup-docker-security.sh  setup-github-deployment.sh  setup-ssh-keys.sh  test_script_access_auth.py  update_swagger_sri.py  validate-deployment-setup.sh  verify_production_connection.py
status/: Dockerfile  docker-compose-status.yml  docker-compose.yml  entrypoint.sh  knit2html.sh  knit2pdf.sh  usage_report.Rmd
tests/: conftest.py  test_account_lockout.py  test_api_validation.py  test_auth.py  test_auto_generated_passwords.py  test_batch_cancellation.py  test_boundary_models.py  test_boundary_routes.py  test_compression.py  test_container_result_submission.py  test_cors_validation.py  test_deployment_utils.py  test_docker_cancellation_tasks.py  test_docker_completed_monitoring.py  test_docker_resource_cleanup.py  test_email_notifications.py  test_execution_cancellation.py  test_execution_cancellation_endpoints.py  test_execution_cleanup.py  test_execution_logs_endpoints.py  test_execution_pagination.py  test_execution_results_status_fix.py  test_execution_update_auth_fix.py  test_executions.py  test_gee_credentials.py  test_gee_oauth_refresh.py  test_gee_terms_enforcement.py  test_google_groups_integration.py  test_improved_status_tracking.py  test_integration.py  test_jwt_security.py  test_news.py  test_oauth2.py  test_openeo_credentials.py  test_openeo_service.py  test_password_reset_token.py  test_password_validation.py  test_performance.py  test_permissions.py  test_rate_limit_reset_by_id.py  (+25 more)
(+59 files in other folders)
